add 'add group' button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             {
                 "imports": {
                   "three": "https://cdn.jsdelivr.net/npm/three@0.167.1/build/three.module.js",
-                  "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.167.1/examples/jsm/"
+                  "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.167.1/examples/jsm/",
+                  "lil-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.20/+esm"
                 }
               }
         </script>
